ruth- delivery admin

--- a/app/src/main/res/layout/delivered_items_layout.xml
+++ b/app/src/main/res/layout/delivered_items_layout.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDeliveryStatusProducts"
-        android:layout_width="409dp"
-        android:layout_height="279dp"
-        android:layout_marginEnd="2dp"
+    <TextView
+        android:id="@+id/labelDeliveredItems"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/deliveredItems"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/delivery_status_products" />
-
+        android:textSize="25sp"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
