--- a/app/src/main/res/layout/fragment_admin_delivery_management.xml
+++ b/app/src/main/res/layout/fragment_admin_delivery_management.xml
@@ -26,4 +26,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btnGO"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="44dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCreateDeliveryStatus" />
+
+    <Button
+        android:id="@+id/btnDCC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="Delivery Credit Card"
+        app:layout_constraintEnd_toStartOf="@+id/btnGO"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnViewDeliveryStatus" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
