--- a/app/src/main/res/layout/fragment_create_delivery_status.xml
+++ b/app/src/main/res/layout/fragment_create_delivery_status.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="Admin.CreateDeliveryStatus">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/frameLayout7"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <TextView
         android:id="@+id/labelDeliveryStatus"
@@ -100,14 +105,14 @@
         android:id="@+id/buttonCreate"
         android:layout_width="260dp"
         android:layout_height="49dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="64dp"
         android:backgroundTint="#FDC12A"
         android:text="Create Delivery Status"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/outputOrderAmount" />
+        app:layout_constraintTop_toBottomOf="@+id/order" />
 
     <TextView
         android:id="@+id/labelUID"
@@ -202,4 +207,46 @@
         app:layout_constraintHorizontal_bias="0.362"
         app:layout_constraintStart_toStartOf="@+id/outputUserid"
         app:layout_constraintTop_toBottomOf="@+id/outputUserid" />
+
+    <TextView
+        android:id="@+id/outputProductNames"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/outputImgUrl" />
+
+    <TextView
+        android:id="@+id/outputImgUrl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/outputOrderAmount" />
+
+    <TextView
+        android:id="@+id/outputId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/outputProductNames"
+        app:layout_constraintStart_toStartOf="@+id/outputProductNames"
+        app:layout_constraintTop_toBottomOf="@+id/outputProductNames" />
+
+    <TextView
+        android:id="@+id/order"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="@+id/outputOrderAmount"
+        app:layout_constraintStart_toStartOf="@+id/outputOrderAmount"
+        app:layout_constraintTop_toBottomOf="@+id/outputOrderAmount" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
