--- a/app/src/main/res/layout/fragment_view_all_delivery.xml
+++ b/app/src/main/res/layout/fragment_view_all_delivery.xml
@@ -2,18 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout5"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".FragmentViewAllDelivery">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDeliveryStatusProducts"
-        android:layout_width="409dp"
-        android:layout_height="279dp"
-        android:layout_marginEnd="2dp"
+        android:id="@+id/recyclerViewAllDeliveryToCreate"
+        android:layout_width="382dp"
+        android:layout_height="717dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/delivery_status_products" />
+        tools:listitem="@layout/deliveries_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
