--- a/app/src/main/res/layout/fragment_return_product.xml
+++ b/app/src/main/res/layout/fragment_return_product.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Ordered By"
+            android:text="Items delivered"
             android:textColor="@color/black"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Cash On Delivery"
+            android:text="Paid By \nCash On Delivery"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:text="Credit Card"
+            android:text="Paid By \nCredit Card"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
