--- a/app/src/main/res/layout/my_order_credit_card_item.xml
+++ b/app/src/main/res/layout/my_order_credit_card_item.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_order_credit_card_item_card_view"
     android:layout_width="match_parent"
-    android:layout_height="330dp"
+    android:layout_height="350dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
     android:elevation="4dp"
@@ -173,18 +173,17 @@
             android:id="@+id/labelCreditOrderId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="Order ID"
-            app:layout_constraintEnd_toEndOf="@+id/my_order_credit_card_item_total_price"
-            app:layout_constraintHorizontal_bias="0.055"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/my_order_credit_card_item_total_price" />
+            app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
         <TextView
             android:id="@+id/outputCreditOrderId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="TextView"
+            android:text="TextView5"
             app:layout_constraintEnd_toEndOf="@+id/labelCreditOrderId"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
